<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCCCC"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_marginTop="16dp"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NewMessageOrText"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:gravity= "center"
        />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="5"
        android:text="@string/TypeYourTextHere" >
                
        <requestFocus />
        </EditText>

<LinearLayout
    android:layout_marginTop="32dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    
    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:layout_weight="1"
        android:text="@string/Send" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:layout_weight="1"
        android:text="@string/Clear" />
    
</LinearLayout>

<LinearLayout
    android:layout_marginTop="16dp"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"     
        android:layout_weight="1"
        android:text="@string/AttachPhoto" />

    <Button
        android:id="@+id/button4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:layout_weight="1"
        android:text="@string/AttachText" />
</LinearLayout>
</LinearLayout>